@@ -1,3 +1,5 @@
+* Use account of write-off journal as default
+* Add write-off journal type
 * Add description on write-off move
 
 Version 3.0.0 - 2013-10-21
